welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:27: error: not found: value T
      setCouleurBrosse(T(i));
                       ^